# russian_app

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  wrangler.jsonc
.github/workflows/: test.yml
data/: alphabet.json  seed_words.csv
docs/research/: learning-principles-brief.md  research-findings.json
docs/superpowers/plans/: 2026-06-13-m1-offline-core.md  2026-06-15-accounts-sync.md  2026-06-20-e2e-tests.md  2026-06-20-feedback-and-hardening.md  2026-06-20-stress-and-yo.md  2026-06-26-learn-to-read-phase1.md
docs/superpowers/specs/: 2026-06-15-accounts-sync-design.md  (+6 more)
migrations/: 0001_init.sql  0002_feedback.sql
site/: app.js  index.html  learn.js  manifest.webmanifest  style.css  sw.js  sync.js
site/data/: alphabet.json  audio.json  patterns.json  reading.json  reading_lessons.json  words.json
src/ruslearn/: __main__.py  accent.py  alphabet.py  api.py  db.py  gemini_cli.py  lexicon.py  models.py  reader.py  seed.py  srs.py  tts.py
tests/: conftest.py  test_accent.py  test_accent_dataset.py  test_alphabet.py  test_api.py  test_dataset_integrity.py  test_gemini.py  test_lexicon.py  test_reader.py  test_seed.py  test_srs.py  test_tts.py
tests/e2e/: alphabet.spec.js  helpers.js  learn-to-read.spec.js  listen.spec.js  patterns.spec.js  reading.spec.js  reviews.spec.js  smoke.spec.js
tests/worker/: body.test.mjs  feedback.test.mjs  learn.test.mjs  merge.test.mjs  session.test.mjs
tools/: accentize_dataset.py  build_dataset.py  build_learn_audio.py
worker/: auth.js  db.js  feedback.js  http.js  index.js
(+3 files in other folders)
